# ai_agent_sandbox2

./: .env_sample  .gitignore  README.md  pyproject.toml
config/finance/: agents.yaml  tasks.yaml
demo/: finance_agent.py  legal_agent.py  news_agent.py  ticker_agent.py
