[project]
name = "ai-agent-sandbox2"
version = "0.2.0"
description = "agentic ai sandbox 2"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "agno>=1.2.7",
    "dotenv>=0.9.9",
    "duckduckgo-search>=2025.4.1",
    "google-genai>=1.9.0",
    "lancedb>=0.21.2",
    "pypdf>=5.4.0",
    "yfinance>=0.2.55",
]
