[project]
name = "ai-agent-sandbox2"
version = "0.2.0"
description = "agentic ai sandbox"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "agno>=1.5.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.1",
    "google-genai>=1.15.0",
    "lancedb>=0.22.0",
    "pypdf>=5.5.0",
    "yfinance>=0.2.60",
]
